rainbow/pearl/rivers, pick/ban, sapphire highlights, transparency??